plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id 'checkstyle'
}

group = 'com.bif'
version = '0.0.1-SNAPSHOT'
description = 'server'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

configurations.configureEach {
	resolutionStrategy {
		force 'com.fasterxml.jackson.core:jackson-core:2.21.1'
		force 'com.fasterxml.jackson.core:jackson-databind:2.21.1'
		force 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.21.1'
		force 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.21.1'
		force 'tools.jackson.core:jackson-core:3.1.0'
		force 'tools.jackson.core:jackson-databind:3.1.0'
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	dependencies {
		dependency 'com.fasterxml.jackson.core:jackson-annotations:2.21'
		dependency 'com.fasterxml.jackson.core:jackson-core:2.21.1'
		dependency 'com.fasterxml.jackson.core:jackson-databind:2.21.1'
		dependency 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.21.1'
		dependency 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.21.1'
		dependency 'tools.jackson:jackson-bom:3.1.0'
		dependency 'tools.jackson.core:jackson-core:3.1.0'
		dependency 'tools.jackson.core:jackson-databind:3.1.0'
	}
}

dependencies {
	constraints {
		implementation 'com.fasterxml.jackson.core:jackson-annotations:2.21'
		implementation 'com.fasterxml.jackson.core:jackson-core:2.21.1'
		implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.1'
		implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.21.1'
		implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.21.1'
		implementation 'tools.jackson:jackson-bom:3.1.0'
		implementation 'tools.jackson.core:jackson-core:3.1.0'
		implementation 'tools.jackson.core:jackson-databind:3.1.0'
	}

	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	
	// Thêm các thư viện từ nhánh của bạn (Auth/Security)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'
	
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-mongodb-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-graphql-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-websocket-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
}

jacoco {
	toolVersion = '0.8.12'
}

checkstyle {
	toolVersion = '10.25.0'
	configFile = file('config/checkstyle/checkstyle.xml')
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
}

tasks.named('jacocoTestCoverageVerification') {
	dependsOn tasks.named('jacocoTestReport')
	violationRules {
		rule {
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.70
			}
		}
	}
}

tasks.named('check') {
	dependsOn tasks.named('jacocoTestCoverageVerification')
}